fix contact form, remove blog dates

--- a/index.html
+++ b/index.html
@@ -1160,19 +1160,16 @@
         </div>
         <div class="blog-grid">
             <article class="blog-card reveal">
-                <span class="blog-card-date">January 15, 2026</span>
                 <h3 class="blog-card-title">What is Crystalline Pottery</h3>
                 <p class="blog-card-excerpt">Crystalline pottery is one of the rarest and most technically demanding forms of ceramic art — a discipline where chemistry, fire, and patience converge to grow real zinc silicate crystals inside the glaze. Unlike most pottery glazes, which dry to a uniform surface, crystalline glazes form macrocrystalline structures that can span several inches across a single piece.</p>
                 <a href="blog/what-is-crystalline-pottery.html" class="blog-read-more">Read More</a>
             </article>
             <article class="blog-card reveal">
-                <span class="blog-card-date">February 3, 2026</span>
                 <h3 class="blog-card-title">Inside the Cone 8 Firing Process</h3>
                 <p class="blog-card-excerpt">Every crystalline piece I make goes through a precisely controlled Cone 8 firing — a 12 to 18 hour process where temperature is everything. The climb to peak heat melts the glaze into a liquid flux, and then the real work begins: a slow, deliberate descent through the crystal-growth window, held for hours at temperatures only a few degrees wide.</p>
                 <a href="blog/cone-8-firing-process.html" class="blog-read-more">Read More</a>
             </article>
             <article class="blog-card reveal">
-                <span class="blog-card-date">February 20, 2026</span>
                 <h3 class="blog-card-title">How Every Crystal Is Unique</h3>
                 <p class="blog-card-excerpt">No two crystalline pots have ever looked the same, and no two ever will. The crystals that grow inside my glazes form through a process governed by chemistry but shaped by chance — the same way snowflakes are identical in structure yet never in pattern. Understanding why requires looking at the microscale events that unfold inside a kiln in the dark.</p>
                 <a href="blog/every-crystal-is-unique.html" class="blog-read-more">Read More</a>
@@ -1191,10 +1188,12 @@
                 <div class="section-rule" style="background:var(--gold-dim);"></div>
             </div>
             <div class="contact-links reveal">
-                <a href="mailto:brandonfrankswork@gmail.com" class="contact-link">brandonfrankswork@gmail.com</a>
+                <a href="mailto:brandonfrankspottery@gmail.com" class="contact-link">brandonfrankspottery@gmail.com</a>
                 <a href="https://www.instagram.com/" target="_blank" rel="noopener" class="contact-link">Instagram</a>
             </div>
-            <form class="contact-form reveal" action="#" method="post">
+            <form class="contact-form reveal" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+                <input type="hidden" name="_replyto" value="brandonfrankspottery@gmail.com">
+                <input type="hidden" name="_subject" value="New message from brandonfrankspottery.com">
                 <input type="text"  name="name"    placeholder="Name"    required>
                 <input type="email" name="email"   placeholder="Email"   required>
                 <textarea           name="message" placeholder="Message" required></textarea>
