--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     ]
     </script>
 
+    <meta name="p:domain_verify" content="7003c34787848a610fcc9a9c0a400680"/>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500&family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
