add privacy policy

--- a/index.html
+++ b/index.html
@@ -1222,6 +1222,7 @@
         <a href="https://www.etsy.com/shop/BrandonFranksPottery" target="_blank" rel="noopener">
             Etsy Shop &nbsp;&rarr;
         </a>
+        <a href="privacy-policy.html" style="margin-left:2rem;">Privacy Policy</a>
     </span>
 </footer>
 
